setup html and css for home page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expense Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <header>
+        <h1>Expense Tracker</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Transactions</a></li>
+                <li><a href="#">Reports</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <h2>Track Your Expenses</h2>
+        <p>Keep a record of your expenses and manage your budget with ease.</p><br>
+        <a href="#" class="cta">Add Your Expences</a>
+    </section>
+    <footer>
+        <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
+    </footer>
 </body>
 </html>
