addExpense, report and transaction page added, linked all pages

--- a/addExpense.html
+++ b/addExpense.html
@@ -20,8 +20,7 @@
     </header>
     <section class="hero">
         <h2>Track Your Expenses</h2>
-        <p>Keep a record of your expenses and manage your budget with ease.</p><br>
-        <a href="addExpense.html" class="cta">Grt Started</a>
+        <p>THis is add expense page</p>
     </section>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
