--- a/addExpense.html
+++ b/addExpense.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleForExpense.css">
 </head>
 <body>
     <header>
@@ -18,10 +18,38 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <h2>Track Your Expenses</h2>
-        <p>THis is add expense page</p>
-    </section>
+    <div><br><br>
+        <form class="give_data">
+            <table class="input_table">
+                <tr>
+                    <td><label for="s1">Amount: </label></td> <td><input type="number" id="amount1"></td>
+                </tr>
+                <tr>
+                    <td><label for="date1">Date: </label></td><td><input type="number" id="date1"></td>
+                </tr>
+                <tr>
+                    <td><label for="description1">Description: </label></td><td><input type="text" id="description1"></td>
+                </tr>
+                <tr>
+                    <td><label>Category:</label></td>
+                    <td>
+                        <input type="radio" id="food" name="category" value="food" required>
+                        <label for="food">Food</label>
+                        <input type="radio" id="bill" name="category" value="bill" required>
+                        <label for="bill">Bill</label>
+                        <input type="radio" id="shopping" name="category" value="shopping" required>
+                        <label for="shopping">Shopping</label>
+                        <input type="radio" id="others" name="category" value="others" required>
+                        <label for="others">Others</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2"><br><button type="submit" id="submit">Save</button></td>
+                </tr>
+            </table>
+            
+        </form><br>
+    </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
