setup transaction page and main js file

--- a/transaction.html
+++ b/transaction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleForTransaction.css">
 </head>
 <body>
     <header>
@@ -18,12 +18,13 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <h2>Track Your Expenses</h2>
-        <p>This is transaction page</p>
-    </section>
+    <div class="output">
+        <button type="button" id="all_info" class="view_button">Show All Transactions</button>
+        <p id="text2">testing</p>
+    </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
