draw chart, report and main js file updated

--- a/report.html
+++ b/report.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="styleForReport.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -28,6 +29,9 @@
         </table>
         <p id="text1">testing</p>
     </div>
+    <div id="chartContainer">
+        <canvas id="chart"></canvas>
+      </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
