seperated js file for all pages

--- a/report.html
+++ b/report.html
@@ -35,6 +35,6 @@
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="jsForReport.js"></script>
 </body>
 </html>
