--- a/addExpense.html
+++ b/addExpense.html
@@ -54,6 +54,6 @@
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="jsForAddExpense.js"></script>
 </body>
 </html>
