--- a/transaction.html
+++ b/transaction.html
@@ -25,6 +25,6 @@
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="jsForTransaction.js"></script>
 </body>
 </html>
