--- a/report.html
+++ b/report.html
@@ -22,7 +22,7 @@
     <div>
         <table class="output_table">
             <tr>
-                <td><button type="button" id="pie_chart" class="view_button">Show Chart 1</button></td>
+                <td><button type="button" id="doughnut_chart" class="view_button">Show Chart 1</button></td>
                 <td><button type="button" id="bar_chart" class="view_button">Show Chart 2</button></td>
                 <td><button type="button" id="remove_chart" class="view_button">Remove Chart</button></td>
             </tr>
