pudate chart massages colors ad fixed ar chart lale issue

--- a/report.html
+++ b/report.html
@@ -27,11 +27,12 @@
                 <td><button type="button" id="remove_chart" class="view_button">Remove Chart</button></td>
             </tr>
         </table>
-        <p id="text1">testing</p>
+        
     </div>
     <div id="chartContainer">
         <canvas id="chart"></canvas>
-      </div>
+    </div><br>
+    <p id="text1">testing</p>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
