added sort by time and category for transection

--- a/transaction.html
+++ b/transaction.html
@@ -19,7 +19,9 @@
         </nav>
     </header>
     <div class="output">
+        <button type="button" id="sort_time" class="sort_button">Sort by Time</button>
         <button type="button" id="all_info" class="view_button">Show All Transactions</button>
+        <button type="button" id="sort_category" class="sort_button">Sort by Category</button>
         <p id="text2">testing</p>
     </div>
     <footer>
