--- a/profile.html
+++ b/profile.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="styleForProfile.css">
 </head>
 <body>
     <header>
@@ -18,11 +19,9 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <h2>Track Your Expenses</h2>
-        <p>Keep a record of your expenses and manage your budget with ease.</p><br>
-        <a href="profile.html" class="cta">Profile</a>
-    </section>
+    <div>
+        This is profile page
+    </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
