updated profile page

--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,25 @@
         </nav>
     </header>
     <div>
-        This is profile page
+        <p id="text5">
+            <br>Please give your name and mail to setup your profile for first time<br>
+            <i><sup>(If you already created your profile, you don't have to fill this form)</sup></i>
+        </p>
+        <form class="give_data">
+            <table class="input_table">
+                <tr>
+                    <td><label for="name">Name: </label></td><td><input type="text" id="name" required></td>
+                </tr>
+                <tr>
+                    <td><label for="mail">Mail: </label></td><td><input type="text" id="mail" required></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><br><button type="submit" id="submit">Save</button></td>
+                </tr>
+            </table>
+            
+        </form><br>
+        <p id="text6">Testing</p>
     </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
