save profile info to local storage

--- a/profile.html
+++ b/profile.html
@@ -40,6 +40,7 @@
         </form><br>
         <p id="text6">Testing</p>
     </div>
+    <script src="jsForProfile.js"></script>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
