added delet transection page

--- a/addExpense.html
+++ b/addExpense.html
@@ -15,6 +15,7 @@
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
+                <li><a href="deletTransection.html">Delet Expences</a></li>
             </ul>
         </nav>
     </header>
