--- a/deletTransection.html
+++ b/deletTransection.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="styleForTransaction.css">
+    <link rel="stylesheet" href="cssForDeletTransection.css">
 </head>
 <body>
     <header>
@@ -19,20 +19,9 @@
             </ul>
         </nav>
     </header>
-    
-    <div class="output">
-        <div class="dropdown">
-            <button class="dropbtn">Show All Transactions</button>
-            <div class="dropdown-content">
-              <a id="sort_time">Sort by Time</a>
-              <a id="sort_category">Sort by Category</a>
-            </div>
-        </div>
-        <p id="text2"><br></p>
-    </div>
+    This is delet page
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
-    <script src="jsForTransaction.js"></script>
 </body>
 </html>
