file name changed to styleForDeleteTransection

--- a/deletTransection.html
+++ b/deletTransection.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="cssForDeletTransection.css">
+    <link rel="stylesheet" href="styleForDeletTransection.css">
 </head>
 <body>
     <header>
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <div>
+
+    </div>
     This is delet page
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
