added quick delet buttons

--- a/deletTransection.html
+++ b/deletTransection.html
@@ -32,6 +32,9 @@
                 <tr>
                     <td><button type="submit" id="submit">Delet</button></td>
                 </tr>
+                <tr>
+                    <td><p id="text"></p></td>
+                </tr>
             </table>
         </form><br>
         <br><br>
@@ -40,11 +43,12 @@
         <button type="button" class="delet_button" id="delet5">Delet Last 5 Transection</button>
         <button type="button" class="delet_button" id="delet">Delet All Transection</button>
         <br><br><br>
-        <p id="text">Delet massage</p>
+        <p id="text2">Delet massage</p>
     </div>
     
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
+    <script src="jsForDeletTransection.js"></script>
 </body>
 </html>
