added help page

--- a/help.html
+++ b/help.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="styleForReport.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="styleForHelp.css">
 </head>
 <body>
     <header>
@@ -22,22 +21,10 @@
         </nav>
     </header>
     <div>
-        <table class="output_table">
-            <tr>
-                <td><button type="button" id="doughnut_chart" class="view_button">Show Chart 1</button></td>
-                <td><button type="button" id="bar_chart" class="view_button">Show Chart 2</button></td>
-                <td><button type="button" id="remove_chart" class="view_button">Remove Chart</button></td>
-            </tr>
-        </table>
-        
+        This is help page
     </div>
-    <div id="chartContainer">
-        <canvas id="chart"></canvas>
-    </div><br>
-    <p id="text1">testing</p>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
-    <script src="jsForReport.js"></script>
 </body>
 </html>
