--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,7 @@
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
                 <li><a href="deletTransection.html">Delet Expences</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
         </nav>
     </header>
