redesigned and changed colors, updated massages and wornings

--- a/addExpense.html
+++ b/addExpense.html
@@ -22,6 +22,7 @@
     </header>
     <div><br><br>
         <form class="give_data">
+            <b><p id="text"></p></b>
             <table class="input_table">
                 <tr>
                     <td><label for="amount1">Amount: </label></td> <td><input type="number" id="amount1" required></td>
@@ -51,7 +52,7 @@
             </table>
             
         </form><br>
-        <p id="text3"></p>
+        <b><p id="text3"></p></b>
     </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
