--- a/deletTransection.html
+++ b/deletTransection.html
@@ -23,9 +23,10 @@
     <div class="all">
         
         <form class="give_data">
+            <b><p id="text3" class="text"></p></b>
             <table class="input_table">
                 <tr>
-                    <td><label for="delet_id">Write Transaction Id to delet</label></td>
+                    <td><label for="delet_id"><b class="text">Write Transaction Id to delet</b></label></td>
                 </tr>
                 <tr>
                     <td><input type="number" id="delet_id" required></td>
@@ -34,17 +35,16 @@
                     <td><button type="submit" id="submit">Delet</button></td>
                 </tr>
                 <tr>
-                    <td><p id="text"></p></td>
+                    <td><b><p id="text" class="text"></p></b></p></td>
                 </tr>
             </table>
         </form><br>
-        <br><br>
-        Quick Delet<br><br>
+        <b class="text">Quick Delet</b><br><br>
         <button type="button" class="delet_button" id="delet1">Delet Last Transection</button>
         <button type="button" class="delet_button" id="delet5">Delet Last 5 Transection</button>
         <button type="button" class="delet_button" id="delet">Delet All Transection</button>
         <br><br><br>
-        <p id="text2">Delet massage</p>
+        <b><p id="text2" class="text"></p></b>
     </div>
     
     <footer>
