--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
                 </tr>
             </table>
         </form><br>
-        <p id="text6">Testing</p>
+        <b><p id="text6"></p></b>
     </div>
     <script src="jsForProfile.js"></script>
     <footer>
