--- a/report.html
+++ b/report.html
@@ -34,7 +34,7 @@
     <div id="chartContainer">
         <canvas id="chart"></canvas>
     </div><br>
-    <p id="text1">testing</p>
+    <b><p id="text1"></p></b>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
