--- a/transaction.html
+++ b/transaction.html
@@ -29,7 +29,9 @@
               <a id="sort_category">Sort by Category</a>
             </div>
         </div>
-        <p id="text2"><br></p>
+        <br><br>
+        <p id="text2"></p>
+        <b><p id="text3"></p></b>
     </div>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
