updated index file

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
+    <div class="main">
+        <br><br><br><br>
         <h2>Track Your Expenses</h2>
-        <p>Keep a record of your expenses and manage your budget with ease.</p><br>
-        <a href="profile.html" class="cta">Profile</a>
-    </section>
+        <p class="h3">Keep a record of your expenses and manage your budget with ease.</p><br><br>
+        <a href="profile.html"><button id="porfile_btn" class="btn">Profile</button></a>
+        
+    </div>
+    
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
