updated nav bar active slot

--- a/transaction.html
+++ b/transaction.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="transaction.html">Transactions</a></li>
+                <li><a href="transaction.html"><u>Transactions</u></a></li>
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
                 <li><a href="deletTransection.html">Delet Expences</a></li>
