--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Expense Tracker</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><u>Home</u></a></li>
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
