--- a/report.html
+++ b/report.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transaction.html">Transactions</a></li>
-                <li><a href="report.html">Reports</a></li>
+                <li><a href="report.html"><u>Reports</u></a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
                 <li><a href="deletTransection.html">Delet Expences</a></li>
                 <li><a href="help.html">Help</a></li>
