changed profile button

--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
     </header>
     <div>
         <p id="text5">
-            <br>Please give your name and mail to setup your profile for first time<br>
+            <br>Please give your name and mail to create or update your profile<br>
             <i><sup>(If you already created your profile, you don't have to fill this form)</sup></i>
         </p>
         <form class="give_data">
