--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
