--- a/help.html
+++ b/help.html
@@ -20,9 +20,59 @@
             </ul>
         </nav>
     </header>
-    <div>
-        This is help page
-    </div>
+    <div class="main">
+        <p class="headings">Welcome</p>
+        <p class="elements">
+            Welcome to our website “Expense Tracker”. In this website you can track your expenses, 
+            so that, you don't spend more than your budget.
+        </p>
+        <p class="headings">How to create or Update profile?</p>
+        <p class="elements">
+            For using all the features of this website, you have to create a profile. By clicking “Create Profile” button
+             of home page you can go to a new page, where you have to write your name and mail and click “Save” button to
+              create profile.<br>
+            If your already created a profile, you will see that “create profile” button has changed to “Update Profile”.
+             Now can change your name and mail whenever you want.
+
+        </p>
+        <p class="headings">What is this "Home Page" about?</p>
+        <p class="elements">
+            Home page is a nice and clean starting point. From there can go to any page of this website.<br>
+            There is button at the center of the page, by clicking this button, you can create and update you profile.
+        </p>
+        <p class="headings">How can I view my expenses?</p>
+        <p class="elements">
+            At "Transactions" page, there is a drop-down button name "Show All Transections", from here you can choose
+             how you would like to orient your transections.<br>
+            There are two options here, first one is "Sort by Time" and second one is "Sort bt Category". By selecting
+             any of these, we can see full list of your expenses.
+        </p>
+        <p class="headings">How can I see the chart?</p>
+        <p class="elements">
+            At "Reports" page, there are three buttons. First one for "Doughnut Chart", second one for "Bar Chart" and
+             third one for "Remove Chart".
+        </p>
+        <p class="headings">How can I add expenses?</p>
+        <p class="elements">
+            At "Add Expences" page, you will find a form to write information about your expenses. You have to write the
+             the amount you spend, date, small discription (this is optional) and select a category.<br> 
+            After filling the form, you just need to click the "Save" button. Your expenses will be saved and you will see
+             a confirmation massege.
+        </p>
+        <p class="headings">How can I delet expenses?</p>
+        <p class="elements">
+            At "Delet Expences" page, there are two options for deleting your saved expenses. First one is delet one
+             expense manually and second one is quick delet.<br>
+            For first one, you have to write the transaction id (in transection list, left side number is transaction id)
+             which you want to delet and click the "Delet" button. Your expense will be deleted and you will get a
+              confirmation massage.<br>
+            For second one, there are three buttons, by clicking these buttons you can quickly delet your expenses.
+        </p>
+        <p class="headings">Why I can't click any buttons?</p>
+        <p class="elements">
+            You have to create a profile to use this website.
+        </p>
+    </div><br><br><br><br>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
