changed page name help to FAQ

--- a/addExpense.html
+++ b/addExpense.html
@@ -16,7 +16,7 @@
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html"><u>Add Expences</u></a></li>
                 <li><a href="deletTransection.html">Delet Expences</a></li>
-                <li><a href="help.html">Help</a></li>
+                <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
