--- a/help.html
+++ b/help.html
@@ -16,7 +16,7 @@
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
                 <li><a href="deletTransection.html">Delet Expences</a></li>
-                <li><a href="help.html"><u>Help</u></a></li>
+                <li><a href="help.html"><u>FAQ</u></a></li>
             </ul>
         </nav>
     </header>
