--- a/deletTransection.html
+++ b/deletTransection.html
@@ -16,7 +16,7 @@
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
                 <li><a href="deletTransection.html"><u>Delet Expences</u></a></li>
-                <li><a href="help.html">Help</a></li>
+                <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
