updated FAQ page

--- a/help.html
+++ b/help.html
@@ -72,6 +72,12 @@
         <p class="elements">
             You have to create a profile to use this website.
         </p>
+        <p class="headings">Will my saved information be removed, if I turn off my device?</p>
+        <p class="elements">
+            No.<br>
+            Even if you turn off your device, your information will be saved. But if you clear the local storage data of
+             your browser, you might lose all your saved information.
+        </p>
     </div><br><br><br><br>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
