changed chart names

--- a/report.html
+++ b/report.html
@@ -24,8 +24,8 @@
     <div>
         <table class="output_table">
             <tr>
-                <td><button type="button" id="doughnut_chart" class="view_button">Show Chart 1</button></td>
-                <td><button type="button" id="bar_chart" class="view_button">Show Chart 2</button></td>
+                <td><button type="button" id="doughnut_chart" class="view_button">Doughnut Chart</button></td>
+                <td><button type="button" id="bar_chart" class="view_button">Bar Chart</button></td>
                 <td><button type="button" id="remove_chart" class="view_button">Remove Chart</button></td>
             </tr>
         </table>
