added readme file, fix some typing errors

--- a/deletTransection.html
+++ b/deletTransection.html
@@ -15,7 +15,7 @@
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
-                <li><a href="deletTransection.html"><u>Delet Expences</u></a></li>
+                <li><a href="deletTransection.html"><u>Delete Expences</u></a></li>
                 <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
@@ -26,23 +26,23 @@
             <b><p id="text3" class="text"></p></b>
             <table class="input_table">
                 <tr>
-                    <td><label for="delet_id"><b class="text">Write Transaction Id to delet</b></label></td>
+                    <td><label for="delet_id"><b class="text">Write Transaction Id to delete</b></label></td>
                 </tr>
                 <tr>
                     <td><input type="number" id="delet_id" required></td>
                 </tr>
                 <tr>
-                    <td><button type="submit" id="submit">Delet</button></td>
+                    <td><button type="submit" id="submit">Delete</button></td>
                 </tr>
                 <tr>
                     <td><b><p id="text" class="text"></p></b></p></td>
                 </tr>
             </table>
         </form><br>
-        <b class="text">Quick Delet</b><br><br>
-        <button type="button" class="delet_button" id="delet1">Delet Last Transection</button>
-        <button type="button" class="delet_button" id="delet5">Delet Last 5 Transection</button>
-        <button type="button" class="delet_button" id="delet">Delet All Transection</button>
+        <b class="text">Quick Delete</b><br><br>
+        <button type="button" class="delet_button" id="delet1">Delete Last Transection</button>
+        <button type="button" class="delet_button" id="delet5">Delete Last 5 Transection</button>
+        <button type="button" class="delet_button" id="delet">Delete All Transection</button>
         <br><br><br>
         <b><p id="text2" class="text"></p></b>
     </div>
