--- a/help.html
+++ b/help.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="styleForHelp.css">
 </head>
+
 <body>
     <header>
         <h1>Expense Tracker</h1>
@@ -15,7 +17,7 @@
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html">Reports</a></li>
                 <li><a href="addExpense.html">Add Expences</a></li>
-                <li><a href="deletTransection.html">Delet Expences</a></li>
+                <li><a href="deletTransection.html">Delete Expences</a></li>
                 <li><a href="help.html"><u>FAQ</u></a></li>
             </ul>
         </nav>
@@ -23,64 +25,66 @@
     <div class="main">
         <p class="headings">Welcome</p>
         <p class="elements">
-            Welcome to our website “Expense Tracker”. In this website you can track your expenses, 
-            so that, you don't spend more than your budget.
+            Welcome to our website "Expense Tracker". In this website, you can track your expenses so that you don't
+            spend more than your budget.
         </p>
-        <p class="headings">How to create or Update profile?</p>
+        <p class="headings">How to create or update profile?</p>
         <p class="elements">
-            For using all the features of this website, you have to create a profile. By clicking “Create Profile” button
-             of home page you can go to a new page, where you have to write your name and mail and click “Save” button to
-              create profile.<br>
-            If your already created a profile, you will see that “create profile” button has changed to “Update Profile”.
-             Now can change your name and mail whenever you want.
-
+            To use all the features of this website, you need to create a profile. By clicking the "Create Profile"
+            button on the home page, you can go to a new page where you need to enter your name and email and click the
+            "Save" button to create a profile.<br>
+            If you have already created a profile, you will see that the "Create Profile" button has changed to "Update
+            Profile". Now you can change your name and email whenever you want.
         </p>
         <p class="headings">What is this "Home Page" about?</p>
         <p class="elements">
-            Home page is a nice and clean starting point. From there can go to any page of this website.<br>
-            There is button at the center of the page, by clicking this button, you can create and update you profile.
+            The home page is a nice and clean starting point. From there, you can go to any page of this website.<br>
+            There is a button at the center of the page. By clicking this button, you can create and update your
+            profile.
         </p>
         <p class="headings">How can I view my expenses?</p>
         <p class="elements">
-            At "Transactions" page, there is a drop-down button name "Show All Transections", from here you can choose
-             how you would like to orient your transections.<br>
-            There are two options here, first one is "Sort by Time" and second one is "Sort bt Category". By selecting
-             any of these, we can see full list of your expenses.
+            At the "Transactions" page, there is a drop-down button named "Show All Transactions". From here, you can
+            choose how you would like to orient your transactions.<br>
+            There are two options here, the first one is "Sort by Time" and the second one is "Sort by Category". By
+            selecting any of these, you can see the full list of your expenses.
         </p>
         <p class="headings">How can I see the chart?</p>
         <p class="elements">
-            At "Reports" page, there are three buttons. First one for "Doughnut Chart", second one for "Bar Chart" and
-             third one for "Remove Chart".
+            At the "Reports" page, there are three buttons. The first one is for "Doughnut Chart", the second one is for
+            "Bar Chart", and the third one is for "Remove Chart".
         </p>
         <p class="headings">How can I add expenses?</p>
         <p class="elements">
-            At "Add Expences" page, you will find a form to write information about your expenses. You have to write the
-             the amount you spend, date, small discription (this is optional) and select a category.<br> 
-            After filling the form, you just need to click the "Save" button. Your expenses will be saved and you will see
-             a confirmation massege.
+            At the "Add Expenses" page, you will find a form to enter information about your expenses. You need to enter
+            the amount you spent, date, small description (this is optional), and select a category.<br>
+            After filling out the form, you just need to click the "Save" button. Your expenses will be saved, and you
+            will see a confirmation message.
         </p>
-        <p class="headings">How can I delet expenses?</p>
+        <p class="headings">How can I delete expenses?</p>
         <p class="elements">
-            At "Delet Expences" page, there are two options for deleting your saved expenses. First one is delet one
-             expense manually and second one is quick delet.<br>
-            For first one, you have to write the transaction id (in transection list, left side number is transaction id)
-             which you want to delet and click the "Delet" button. Your expense will be deleted and you will get a
-              confirmation massage.<br>
-            For second one, there are three buttons, by clicking these buttons you can quickly delet your expenses.
+            At the "Delete Expenses" page, there are two options for deleting your saved expenses. The first one is to
+            delete one expense manually, and the second one is to quick delete.<br>
+            For the first one, you need to enter the transaction ID (in the transaction list, the left-side number is
+            the transaction ID) that you want to delete and click the "Delete" button. Your expense will be deleted, and
+            you will get a confirmation message.<br>
+            For the second one, there are three buttons. By clicking these buttons, you can quickly delete your
+            expenses.
         </p>
-        <p class="headings">Why I can't click any buttons?</p>
+        <p class="headings">Why can't I click any buttons?</p>
         <p class="elements">
-            You have to create a profile to use this website.
+            You need to create a profile to use this website.
         </p>
         <p class="headings">Will my saved information be removed, if I turn off my device?</p>
         <p class="elements">
             No.<br>
             Even if you turn off your device, your information will be saved. But if you clear the local storage data of
-             your browser, you might lose all your saved information.
+            your browser, you might lose all your saved information.
         </p>
     </div><br><br><br><br>
     <footer>
         <p>&copy; 2023 Expense Tracker. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
