changed shape of all pages for fixing mobile browser issue

--- a/addExpense.html
+++ b/addExpense.html
@@ -39,7 +39,7 @@
                         <input type="radio" id="food" name="category" value="food" required>
                         <label for="food">Food</label>
                         <input type="radio" id="bill" name="category" value="bill" required>
-                        <label for="bill">Bill</label>
+                        <label for="bill">Bill Pay</label>
                         <input type="radio" id="shopping" name="category" value="shopping" required>
                         <label for="shopping">Shopping</label>
                         <input type="radio" id="others" name="category" value="others" required>
