added seoerate page for update or delete profile

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <br><br><br><br>
         <h2>Track Your Expenses</h2>
         <p class="h3">Keep a record of your expenses and manage your budget with ease.</p><br><br>
-        <a href="profile.html"><button id="porfile_btn" class="btn">Profile</button></a>
-        
+        <div id="profile"></div>
     </div>
     
     <footer>
