--- a/profile.html
+++ b/profile.html
@@ -22,9 +22,8 @@
         </nav>
     </header>
     <div>
-        <p id="text5">
-            <br>Please give your name and mail to create or update your profile<br>
-            <i><sup>(If you already created your profile, you don't have to fill this form)</sup></i>
+        <p class="text5">
+            <br>Please give your name and mail to create profile<br>
         </p>
         <form class="give_data">
             <table class="input_table">
