added seperate page for update or delete profile, updated FAQ and readme files

--- a/help.html
+++ b/help.html
@@ -28,13 +28,21 @@
             Welcome to our website "Expense Tracker". In this website, you can track your expenses so that you don't
             spend more than your budget.
         </p>
-        <p class="headings">How to create or update profile?</p>
+        <p class="headings">How to create profile?</p>
         <p class="elements">
             To use all the features of this website, you need to create a profile. By clicking the "Create Profile"
             button on the home page, you can go to a new page where you need to enter your name and email and click the
             "Save" button to create a profile.<br>
             If you have already created a profile, you will see that the "Create Profile" button has changed to "Update
             Profile". Now you can change your name and email whenever you want.
+        </p>
+        <p class="headings">How can I delete or update profile?</p>
+        <p class="elements">
+            If you have already created a profile, you will see that the "Create Profile" button on the home page has
+             changed to "Update Profile". Now you can change your name and email whenever you want.<br>
+            There is a "Delete Profile" button bottom center of the page. By clicking this button your can delete your
+             profile. Once you delete your profile all of your saved information will be deleted and if you want to use
+              this website you have to create a new profile.
         </p>
         <p class="headings">What is this "Home Page" about?</p>
         <p class="elements">
