--- a/addExpense.html
+++ b/addExpense.html
@@ -35,15 +35,16 @@
                 </tr>
                 <tr>
                     <td><label>Category:</label></td>
-                    <td>
+                    <td><div class="radio_options">
                         <input type="radio" id="food" name="category" value="food" required>
                         <label for="food">Food</label>
                         <input type="radio" id="bill" name="category" value="bill" required>
-                        <label for="bill">Bill Pay</label>
+                        <label for="bill">Bill</label>
                         <input type="radio" id="shopping" name="category" value="shopping" required>
                         <label for="shopping">Shopping</label>
                         <input type="radio" id="others" name="category" value="others" required>
                         <label for="others">Others</label>
+                    </div>
                     </td>
                 </tr>
                 <tr>
