typing error fixed, added delete all transections when delete profile

--- a/transaction.html
+++ b/transaction.html
@@ -14,8 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transaction.html"><u>Transactions</u></a></li>
                 <li><a href="report.html">Reports</a></li>
-                <li><a href="addExpense.html">Add Expences</a></li>
-                <li><a href="deletTransection.html">Delete Expences</a></li>
+                <li><a href="addExpense.html">Add Expenses</a></li>
+                <li><a href="deletTransection.html">Delete Expenses</a></li>
                 <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
