--- a/deletTransection.html
+++ b/deletTransection.html
@@ -14,8 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html">Reports</a></li>
-                <li><a href="addExpense.html">Add Expences</a></li>
-                <li><a href="deletTransection.html"><u>Delete Expences</u></a></li>
+                <li><a href="addExpense.html">Add Expenses</a></li>
+                <li><a href="deletTransection.html"><u>Delete Expenses</u></a></li>
                 <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
