--- a/report.html
+++ b/report.html
@@ -17,8 +17,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="transaction.html">Transactions</a></li>
                 <li><a href="report.html"><u>Reports</u></a></li>
-                <li><a href="addExpense.html">Add Expences</a></li>
-                <li><a href="deletTransection.html">Delete Expences</a></li>
+                <li><a href="addExpense.html">Add Expenses</a></li>
+                <li><a href="deletTransection.html">Delete Expenses</a></li>
                 <li><a href="help.html">FAQ</a></li>
             </ul>
         </nav>
